ingress/helm-ingress.yaml
# Ingress works, but app refuses HTTPS
# install helm with:   helm upgrade --install kubernetes-dashboard kubernetes-dashboard/kubernetes-dashboard --create-namespace --namespace kubernetes-dashboard --kube-context kind-k8s-playground
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-ingress
  namespace: kubernetes-dashboard
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - dashboard.hack
      secretName: tls-secret
  rules:
    - host: dashboard.hack
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: kubernetes-dashboard-kong-proxy
                port:
                  number: 443
